align mobile style to design, prevent column resizing

--- a/styles/components/_top-collections.scss
+++ b/styles/components/_top-collections.scss
@@ -4,11 +4,11 @@
   column-gap: 1rem;
   row-gap: 1rem;
 
-  @media (min-width: 849px) {
+  @media (min-width: 978px) {
     grid-auto-flow: column;
   }
 
-  @media (min-width: 1410px) {
+  @media (min-width: 1540px) {
     grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
@@ -49,27 +49,12 @@
   white-space: nowrap;
 }
 
-
-.display-above-small {
-  display: flex;
-}
-.display-below-small {
-  display: none;
+@include tablet {
+  .w-160 {
+    width :160px
+  }
 }
 
-@include until(540px) {
-  .display-above-small {
-    display: none;
-  }
-  .display-below-small {
-    display: flex;
-  }
-  .mobile-padding {
-    padding-left: 12px !important;
-    padding-right: 12px !important;
-  }
-
-}
 
 @include mobile {
   .mobile {
